# CV_Scanning_be

./: README.md  config.py  main.py  pyproject.toml
api/v1/: auth.py  company.py  cv.py  index.py  user.py
app/: application.py
core/: authentication.py  exception_handler.py  origin_constant.py
db/: db_connection.py  db_deps_inj.py
exception/: AppException.py  ExpiredTokenException.py  NotFoundException.py  UnauthorizedException.py  ValidationException.py
prompt/: ai_prompt_v1.py
schema/: BaseResponse.py
schema/auth/: auth_request.py
schema/company/: company_request.py  company_response.py
schema/cv/: ai_evaluation_response.py  cv_response.py
schema/test/: request_test.py  response_test.py
schema/user/: user_data.py
services/: ai_service.py  auth_service.py  company_service.py  cv_service.py  evaluation_service.py  storage_service.py
